infra/k8s/teme-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teme-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teme
  template:
    metadata:
      labels:
        app: teme
    spec:
      containers:
        - name: teme
          image: george1999/teme
---
apiVersion: v1
kind: Service
metadata:
  name: teme-service
spec:
  selector:
    app: teme
  ports:
    - name: teme
      protocol: TCP
      port: 3501
      targetPort: 3501
