infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: licenta.com
      http:
        paths:
          - path: /users/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3500
          - path: /teme/?(.*)
            backend:
              serviceName: teme-service
              servicePort: 3501
